# gke-auth-sidecar

./: .gitignore  Dockerfile  README.md  pyproject.toml  sidecar.py  test_sidecar.py
.github/workflows/: ci.yaml  publish.yaml
