[project]
name = "auth-sidecar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Eric Larssen", email = "eric.larssen@realkinetic.com" }]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.pdm]
distribution = false
